Current stable ish version

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,8 +70,8 @@ html {
     height: auto;
     /* /* display: block; */
     margin: 107px auto;
-    position: absolute;
-    bottom: 20px;
+    /* position: absolute;
+    bottom: 20px; */
 }
 
 .onboarding-text {
@@ -323,4 +323,25 @@ footer {
     height: auto;
     margin: 0 auto;
     display: block;
+}
+
+#spinner {
+    border: 16px solid #f3f3f3;
+    /* Light grey */
+    border-top: 16px solid #3498db;
+    /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
 }
